--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -20,3 +20,9 @@ body {
 		padding-right: 0px;
 	}
 }
+@media only screen and (min-width: 600px) {
+	.MuiContainer-root {
+		height: 150vh;
+		background: red;
+	}
+}
